[Misc] Convert test to JUnit5